<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundooo"
    tools:context=".menu">

    <Button
        android:id="@+id/btnquizmenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:onClick="btnquiz"
        android:text="@string/btnquizmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhomemenu" />

    <Button
        android:id="@+id/btnhomemenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:onClick="btnhomemenu"
        android:text="@string/btnhomemenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhome_" />

    <Button
        android:id="@+id/btnhome_"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:onClick="btnhomemenu"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imgtopo4"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@+id/btnhome_"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobranca2" />

    <Button
        android:id="@+id/btnsairmenu"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="sans-serif-black"
        android:onClick="btnsair"
        android:text="@string/btnsairmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnquizmenu" />

    <Switch
        android:id="@+id/swt_tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="168dp"
        android:minHeight="48dp"
        android:onClick="MudarTema"
        android:text="@string/btntematxt"
        android:textOff="Dark"
        android:textOn="Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsairmenu" />

</androidx.constraintlayout.widget.ConstraintLayout>