<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundooo"
    android:textAlignment="center">

    <ScrollView
        android:id="@+id/scrl_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="32dp"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="35dp"><![CDATA[>



                ]]>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="76dp"
                        android:layout_marginTop="110dp"
                        android:layout_marginEnd="75dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="Beth Smith"
                        android:textColor="@color/verde"
                        android:textSize="34sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="83dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="141dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="141dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/apelidopers"
                        android:textAlignment="center"
                        android:textColor="@color/verde"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="60dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="153dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="152dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/idadepers"
                        android:textAlignment="center"
                        android:textColor="@color/verde"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="65dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="150dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/idaderick"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="52dp"
                        android:layout_height="21dp"
                        android:layout_marginStart="157dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="157dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sexopers"
                        android:textAlignment="center"
                        android:textColor="@color/verde"
                        android:textSize="18dp"
                        app:flow_horizontalAlign="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="146dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="145dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sexorick"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="65dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="150dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sobrepers"
                        android:textAlignment="center"
                        android:textColor="@color/verde"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView11" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="163dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="98dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="97dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/apelidorick"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="333dp"
                        android:layout_height="82dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sobrerick"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnhome3"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:onClick="btnhomemenu"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imgtopo2"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobranca2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="245dp"
        android:layout_height="240dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:elevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/persona1" />


</androidx.constraintlayout.widget.ConstraintLayout>